# PMP_2

./: .gitignore  READMI.MD  app.py  cleanup.py  config.py  database.py  install_pmp.sh  log.py  main.py  modbus_handler.py  mqtt_handler.py  pmp_install.sh  power_manager.db  pyproject.toml  requirements.txt
static/css/: styles.css
templates/: data_page.html  data_page.html~  header.html  header.html~  index.html  navbar.html
